# prompt-lab

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/prompt_lab/: __init__.py  cli.py  ollama.py  templates.py
src/prompt_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py
